feat/trace-architecture-decisions (#58)
* feat: trace architecture decision records as specification items

* rename the adrs to match the MADR format

* refactor: use Stream.toList instead of Collectors.toList